# mm-mae

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/train/: default.yaml
multirun/2025-07-07/16-17-37/: multirun.yaml
multirun/2025-07-07/16-17-37/0/.hydra/: config.yaml  hydra.yaml  overrides.yaml
src/mm_mae/: train.py
tests/: test_smoke.py
